test_regress/t/t_const_slicesel_bad.out
%Error: t/t_const_slicesel_bad.v:12:42: Slice selection index '[3:1]' outside data type's '[2:0]'
                                      : ... note: In instance 't'
   12 |   localparam int unsigned B32_T[1:0] = A3[3:1];
      |                                          ^
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
